# FMU

./: .gitignore  CMakeLists.txt  README.md  test_linux.sh
examples/: file_comparison.md  main.cpp
include/fmu/: api.hpp  data_models.hpp
src/: api.cpp
